workloads/kube-burner/workloads/large-networkpolicy-egress/13_anp_allow-all-traffic-open-test-p35.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-all-traffic-open-test-p35
spec:
  priority: 35
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          anplabel: anp-open
      podSelector:
        matchLabels:
          anplabel: anp-open
  ingress:
  - name: "allow-all-ingress-from-anp-test"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-test
        podSelector:
          matchLabels:
            anplabel: anp-test
  egress:
  - name: "allow-all-egress-to-anp-test"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-test
        podSelector:
          matchLabels:
            anplabel: anp-test
